[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "slam-drl-hyperopt"
version = "0.1.0"
description = "RGB-D Visual SLAM with Deep Reinforcement Learning hyperparameter optimization"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Nitai Shah" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "matplotlib>=3.7",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "mypy"]

[project.scripts]
run-baseline = "scripts.run_baseline_slam:main"
run-drl      = "scripts.run_drl_slam:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["slam*", "rl*", "scripts*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
